################################################################################
# Copyright (c) 2024 Vladislav Trifochkin
#
# This file is part of `tieton-lib`.
#
# Changelog:
#      2024.08.26 Initial version.
################################################################################
add_subdirectory(qt5)
